--- a/package.json
+++ b/package.json
@@ -7,15 +7,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "eslint-config-rallycoding": "^3.2.0",
     "firebase": "^4.8.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "save-dev": "^2.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-jest": "22.0.4",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-kingstinct-react-native": "^1.0.1",
+    "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-flowtype": "^2.33.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-lodash-fp": "^2.1.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react-native": "^2.3.2",
     "jest": "22.0.4",
     "react-test-renderer": "16.0.0"
   },
